syntax = "proto3";

package WeatherEventGenerator;

option csharp_namespace = "WeatherEventGenerator";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service WeatherEventStreamService{
  rpc WeatherEventStream(google.protobuf.Empty) returns (stream EventStreamResponse);
  rpc WeatherEventStreamDuplex(stream google.protobuf.Empty) returns (stream EventStreamResponse);
}

message EventStreamResponse{
  int64 id = 1;
  int64 sensor_id = 2;
  StreamSensorType sensor_type = 3;
  double temperature = 4;
  int64 humidity = 5;
  int64 carbon_dioxide = 6;
  google.protobuf.Timestamp created_at = 7;
}

enum StreamSensorType {
  STREET = 0;
  HOME = 1;
}